automatizacion de inicio de mesa

--- a/apps/gest_votacion/templates/gest_votacion/ini_mesa.html
+++ b/apps/gest_votacion/templates/gest_votacion/ini_mesa.html
@@ -20,9 +20,9 @@
         <p> . . . . . . . . . . . . . . . . . . . . . . . .</p>
       </div>
     <div class="col">
-      <a class='mb-2 mr-2 btn btn-primary btn-block' href="{{object.get_absolute_url_mesa_ini}}">
+      <button type="submit" name="btn" class='mb-2 mr-2 btn btn-primary btn-block'>
         <b>Iniciar</b>
-      </a>
+      </button>
       <a class='mb-2 mr-2 btn btn-secondary btn-block' href="{{object.eleccion.get_absolute_url}}">
         <b>Cancelar</b>
       </a>
