--- a/apps/gest_votacion/templates/gest_votacion/mesa_ope.html
+++ b/apps/gest_votacion/templates/gest_votacion/mesa_ope.html
@@ -13,12 +13,9 @@
 {% include "gest_votacion/snippets/padronelector_table.html" %}
 {% else %}
 <h1>La elección inicia a las {{inicio}}hs </h1>
-<form method="post">
-  {% csrf_token %}
-  <button type="submit" name="btn" class='btn btn-primary btn-lg btn-block'>
+  <a href="{{object.get_absolute_url_mesa_ope}}" class='btn btn-primary btn-lg btn-block'>
     Actualizar
-  </button>
-</form>
+  </a>
 {% endif %}
 {% endblock %}
 {% endblock %}
