--- a/apps/gest_votacion/templates/gest_votacion/snippets/padronelector_table.html
+++ b/apps/gest_votacion/templates/gest_votacion/snippets/padronelector_table.html
@@ -23,7 +23,7 @@
           <td>
             <!--'Acción' cell-->
             {% if obj.estado_padronelector == 0 %}
-              <button type="submit" name="btn" value="{{obj.id}}" class='btn btn-info btn-block'>
+              <button type="submit" name="btn-autorizar" value="{{obj.id}}" class='btn btn-info btn-block'>
                 Autorizar
               </button>
             {% else %}
