--- a/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
+++ b/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
@@ -55,7 +55,7 @@
       <p> . . . . . . . . . . . . . . . . . . . . . . . .</p>
     </div>
     <div class="col">
-      <a class='mb-2 mr-2 btn btn-primary btn-block' href="{{object.get_absolute_url_mesa_ini}}">
+      <a class='mb-2 mr-2 btn btn-primary btn-block' href="{{object.get_mesa_ini_url}}">
         <b>Iniciar</b>
       </a>
       <a class='mb-2 mr-2 btn btn-secondary btn-block' href="{{object.eleccion.get_absolute_url}}">
