--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_ini_conteo.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_ini_conteo.html
@@ -4,7 +4,7 @@
     <div class="widget-content-wrapper">
       <div class="widget-content-left">
         <div class="widget-heading">
-          <a class='text-dark' href='{{object.get_absolute_url_ini_conteo}}'>
+          <a class='text-dark' href='{{object.get_ini_conteo_url}}'>
             Solicitar el inicio del recuento de votos
           </a>
         </div>
