--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_ini_privada.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_ini_privada.html
@@ -4,7 +4,7 @@
     <div class="widget-content-wrapper">
       <div class="widget-content-left">
         <div class="widget-heading">
-          <a class='text-dark' href='{{object.get_absolute_url_descifrado}}'>
+          <a class='text-dark' href='{{object.get_descifrado_url}}'>
             Inicializar clave para descifrado
           </a>
         </div>
