--- a/apps/gest_votacion/templates/gest_votacion/ini_urna.html
+++ b/apps/gest_votacion/templates/gest_votacion/ini_urna.html
@@ -17,6 +17,15 @@
       <option value="12">Rojo</option>
     </select>
   </div>
+  <div class="form-group">
+    <label>Elección</label>
+    <select name="eleccion" class="form-control" id="id_eleccion">
+      {% for mesa in mesas %}
+        <option value={{mesa.eleccion.id}}>{{mesa.eleccion}}</option>
+      {% endfor %}
+
+    </select>
+  </div>
   <button type="submit" class="btn btn-primary">Iniciar</button>
 </form>
 {% endblock %}
