--- a/apps/gest_votacion/templates/gest_votacion/ini_urna.html
+++ b/apps/gest_votacion/templates/gest_votacion/ini_urna.html
@@ -19,9 +19,9 @@
   </div>
   <div class="form-group">
     <label>Elección</label>
-    <select name="eleccion" class="form-control" id="id_eleccion">
+    <select name="eleccion" class="form-control" id="id_urna">
       {% for mesa in mesas %}
-        <option value={{mesa.eleccion.id}}>{{mesa.eleccion}}</option>
+        <option value={{mesa.urna.id}}>{{mesa.eleccion}}</option>
       {% endfor %}
 
     </select>
