control de eleccion-mesa-urna_2.1

--- a/apps/gest_votacion/templates/gest_votacion/ini_urna.html
+++ b/apps/gest_votacion/templates/gest_votacion/ini_urna.html
@@ -19,7 +19,7 @@
   </div>
   <div class="form-group">
     <label>Elección</label>
-    <select name="eleccion" class="form-control" id="id_urna">
+    <select name="id_urna" class="form-control" id="id_urna">
       {% for mesa in mesas %}
         <option value={{mesa.urna.id}}>{{mesa.eleccion}}</option>
       {% endfor %}
