--- a/apps/gest_cargo/templates/gest_cargo/cargo_detail.html
+++ b/apps/gest_cargo/templates/gest_cargo/cargo_detail.html
@@ -12,7 +12,7 @@
   {% endcomment %}
   {% for eleccion in object.eleccion_set.all %}
     <div class="list-group">
-      <a href={% url eleccion.get_absolute_url %} class="list-group-item list-group-item-action">
+      <a href={{eleccion.get_absolute_url}} class="list-group-item list-group-item-action">
         {{eleccion}}
       </a>
     </div>
