if self.object.es_programable() == 5:

--- a/apps/gest_cargo/templates/gest_cargo/cargo_detail.html
+++ b/apps/gest_cargo/templates/gest_cargo/cargo_detail.html
@@ -4,8 +4,8 @@
 {% if object.editable %}
 <h1>ESTE CARGO AUN NO SE USO EN ELECCIONES</h1>
 {% else %}
-  <h1>Este cargo no se puede editar</h1>
-  <h3>Se utilizo en las siguientes elecciones:</h3>
+  <h1>Cargo no editable</h1>
+  <h3>se utilizo en las siguientes elecciones:</h3>
   {% comment %}
     Revisar - Sera necesario un scroll
     https://www.w3schools.com/bootstrap4/bootstrap_scrollspy.asp
