--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_candidato.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_candidato.html
@@ -3,18 +3,23 @@
   <div class="widget-content-outer">
     <div class="widget-content-wrapper">
       <div class="widget-content-left">
+        {% if candidato %}
         <div class="widget-heading text-dark">
           <a class='text-dark' href="{% url 'gest_preparacion:adm-candidato' object.id %}">
             Administrar candidatos #
           </a>
         </div>
-        {% if candidato.all.count %}
         <div class="widget-subheading">
-          <b>Total de candidatos postulados: {{candidato.all.count}}</b>
+          <b>Total de candidatos postulados: {{candidato}}. {% if candidato < 2 %}Se necesita, almenos dos candidatos{% endif %}</b>
         </div>
         {% else %}
+        <div class="widget-heading text-dark">
+          <a class='text-dark' href="{% url 'gest_preparacion:adm-candidato' object.id %}">
+            >> NO HAY CANDIDATOS POSTULADOS >> POSTULAR
+          </a>
+        </div>
         <div class="widget-subheading text-danger">
-        <b>No hay candidatos postulados</b>
+          <b>Se necesita, almenos dos candidatos</b>
         </div>
         {% endif %}
       </div>
