--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_mesa.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_mesa.html
@@ -3,21 +3,19 @@
   <div class="widget-content-outer">
     <div class="widget-content-wrapper">
       <div class="widget-content-left">
-        {% if mesa.estado_mesa %}
         <div class="widget-heading">
+          {% if mesa.estado_mesa %}
           <a class='text-dark' href='{{mesa.get_absolute_url}}'>
             Administrar Autoridad de Mesa #
           </a>
-        </div>
-        {% else %}
-        <div class="widget-heading">
+          {% else %}
           <a class='text-danger' href='{{mesa.get_absolute_url}}'>
-            La mesa no posee Autoridad #
+            >> MESA SIN AUTORIDAD DESIGNADA # >> Designar
           </a>
+          {% endif %}
         </div>
-        {% endif %}
-        <div class="widget-subheading">
-          <b>Mesa en estado "{{mesa.get_estado_mesa_display}}"</b>
+        <div class="widget-subheading text-warning">
+          <b>- - - - - - - -</b>
         </div>
       </div>
       <div class="widget-content-right">
