--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_padron.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_padron.html
@@ -3,20 +3,18 @@
   <div class="widget-content-outer">
     <div class="widget-content-wrapper">
       <div class="widget-content-left">
+        <div class="widget-heading">
         {% if padron.vacio %}
-        <div class="widget-heading text-danger">
-          <a class='text-dark' href='{{padron.get_absolute_url}}'>
+          <a class='text-danger' href='{{padron.get_absolute_url}}'>
             >> EL PADRON NO POSEE ELECTORES >> Agregar >>
           </a>
-        </div>
-        {% else %}
-        <div class="widget-heading text-danger">
+          {% else %}
           <a class='text-dark' href='{{padron.get_absolute_url}}'>
             Administrar Electores del Padron #
           </a>
         </div>
         {% endif %}
-        <div class="widget-subheading">
+        <div class="widget-subheading text-warning">
           Como minimo, los candidatos deben pertenecer al padron.
         </div>
       </div>
