--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_mesa.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_mesa.html
@@ -14,7 +14,7 @@
           </a>
           {% endif %}
         </div>
-        <div class="widget-subheading text-warning">
+        <div class="widget-subheading">
           <b>- - - - - - - -</b>
         </div>
       </div>
