--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_padron.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_padron.html
@@ -14,7 +14,7 @@
           </a>
         </div>
         {% endif %}
-        <div class="widget-subheading text-warning">
+        <div class="widget-subheading">
           Como minimo, los candidatos deben pertenecer al padron.
         </div>
       </div>
