--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
@@ -3,7 +3,8 @@
   <div class="widget-content-outer">
     <div class="widget-content-wrapper">
       <div class="widget-content-left">
-        <div class="widget-heading text-dark">
+        {% if object.es_programable==5%}
+        <div class="widget-heading">
           <a class='text-dark' href="{% url 'gest_programacion:adm-programar' object.id %}">
             Administrar programación #
           </a>
@@ -11,6 +12,16 @@
         <div class="widget-subheading">
           <b>Una vez programado los horarios, finalizara la preparación</b>
         </div>
+        {% else %}
+        <div class="widget-heading">
+          <a class='text-danger' href="#">
+            >> AUN NO SE PUEDE PROGRAMAR
+          </a>
+        </div>
+        <div class="widget-subheading">
+          <b>FALTA . . . ALGO</b>
+        </div>
+        {% endif %}
       </div>
       <!--div class="widget-content-right"></div-->
     </div>
