--- a/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
+++ b/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
@@ -11,11 +11,11 @@
     <div class="card mb-3 widget-content bg-premium-dark">
       <div class="widget-content-wrapper text-white">
         <div class="widget-content-left">
-          <div class="widget-heading">CODIGO DE INICIO</div>
-          <div class="widget-subheading">para iniciar la terminal de votación</div>
+          <div class="widget-heading">ESPERANDO EL INICIO DE LA URNA</div>
+          <div class="widget-subheading">Cuando la urna este iniciada, actualice esta pagina</div>
         </div>
         <div class="widget-content-right">
-          <div class="widget-numbers text-warning"><span>{{urna.codigo_inicio}}</span></div>
+          <div class="widget-numbers text-warning"><span>HORA DE INICIO???</span></div>
         </div>
       </div>
     </div>
