<h1>Ultimas elecciones realizadas</h1>

--- a/templates/base.html
+++ b/templates/base.html
@@ -316,10 +316,10 @@
           {% block rows %}
           <div class="row">
             <div class="col d-flex justify-content-center">
-              <h1>COLUMNA 1</h1>
+              <h1>Ultimas elecciones realizadas</h1>
             </div>
             <div class="col d-flex justify-content-center">
-              <h1>COLUMNA 2</h1>
+              <h1>Proximas elecciones</h1>
             </div>
           </div>
           {% endblock %}
