--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
-
-{#% load static %#}
+{% load static %}
+<!--head-->
+{% block link-script %}
+  <link rel="stylesheet" type="text/css" href="{% static 'DataTables-v1/datatables.min.css' %}">
+  <script src="{% static 'DataTables-v1/jQuery-3.3.1/jquery-3.3.1.min.js' %}"></script>
+  <script src="{% static 'DataTables-v1/datatables.min.js'%}"></script>
+{% endblock %}
+<!-- ./head-->
 
 {% block nav-items-izquierda %}
 {% endblock %}
@@ -8,5 +14,34 @@
 {% block dropdown-menu %}
 {%endblock%}
 
-{#% block vertical-nav-menu %#}
-{#% block app-sidebar %}{% endblock %#}
+{% block rows %}
+<div class="row">
+  <div class="col d-flex justify-content-center">
+    <h1>Ultimas elecciones realizadas</h1>
+      {% if cerradas %}
+      {% comment %}  DATA TABLE DE {{cerradas}}  {% endcomment %}
+      {% else %}
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h2 class="display-4">Aun no hay elecciones que completen la votación</h1>
+            <p class="lead">. . .</p>
+          </div>
+        </div>
+      {% endif %}
+
+  </div>
+  <div class="col d-flex justify-content-center">
+    <h1>Proximas elecciones</h1>
+      {% if proximas %}
+      {% comment %}DATA TABLE DE {{proximas}}{% endcomment %}
+      {% else %}
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h2 class="display-4">Aun no hay elecciones proximas</h1>
+            <p class="lead">. . .</p>
+          </div>
+        </div>
+      {% endif %}
+  </div>
+</div>
+{% endblock %}
