--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -18,9 +18,9 @@
 <div class="row">
   <!-- Ultimas elecciones realizadas -->
   <div class="col d-flex justify-content-center">
-    <div class="card">
+    <div class="card-fluid">
       <div class="card-header">
-        <h1>Ultimas elecciones realizadas</h1>
+        Ultimas elecciones
       </div>
       <div class="card-body">
         {% if cerradas %}
@@ -38,9 +38,9 @@
   </div>
   <!-- ./Ultimas elecciones realizadas -->
   <div class="col d-flex justify-content-center">
-    <div class="card">
+    <div class="card-fluid">
       <div class="card-header">
-        <h1>Proximas elecciones</h1>
+        Proximas elecciones
       </div>
       <div class="card-body">
       {% if proximas %}
