<div class="card">

--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -18,7 +18,7 @@
 <div class="row">
   <!-- Ultimas elecciones realizadas -->
   <div class="col d-flex justify-content-center">
-    <div class="card-fluid">
+    <div class="card">
       <div class="card-header">
         Ultimas elecciones
       </div>
