<div class="container">

--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -15,6 +15,7 @@
 {%endblock%}
 
 {% block rows %}
+<div class="container">
 <div class="row">
   <!-- Ultimas elecciones realizadas -->
   <div class="col d-flex justify-content-center">
@@ -38,7 +39,7 @@
   </div>
   <!-- ./Ultimas elecciones realizadas -->
   <div class="col d-flex justify-content-center">
-    <div class="card-fluid">
+    <div class="card">
       <div class="card-header">
         Proximas elecciones
       </div>
@@ -56,5 +57,6 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 {% endblock %}
