--- a/apps/bienvenida/templates/bienvenida/snippets/snippet_table_bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/snippets/snippet_table_bienvenida.html
@@ -12,7 +12,7 @@
   <tbody>
     {% for object in object_list %}
     <tr>
-      {% for value in object.get_field_values %}
+      {% for value in object.get_field_values_bienvenida %}
       <td>{{value}}</td>
       {% endfor %}
       <td>
