--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -62,3 +62,16 @@
 </div>
 </div>
 {% endblock %}
+
+{% block  script_DataTable %}
+<script>
+  $(document).ready(function() {
+    $('#data1').DataTable();
+  });
+
+  $(document).ready(function() {
+    $('#data2').DataTable();
+  });
+
+</script>
+{% endblock %}
