--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
@@ -19,7 +19,7 @@
           </a>
         </div>
         <div class="widget-subheading">
-          <b>FALTA . . . ALGO</b>
+          <b>FALTA . . . ALGO: {{object.es_programable}}</b>
         </div>
         {% endif %}
       </div>
