--- a/apps/bienvenida/templates/bienvenida/resultado.html
+++ b/apps/bienvenida/templates/bienvenida/resultado.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block div_card-body %}
   <h1>RESULTADO DE LAS ELECCIONES</h1>
-  <h3>Total de asistencias ##: {{escrutinio}}</h3>
+  <h3>Total de asistencias ##:</h3>
   {% for item in escrutinio %}
     <div class="list-group">
       <li class="list-group-item d-flex justify-content-between align-items-center">
