--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -15,7 +15,7 @@
 {%endblock%}
 
 {% block rows %}
-<div class="container">
+<div class="container-fluid">
 <div class="row">
   <!-- Ultimas elecciones realizadas -->
   <div class="col d-flex justify-content-center">
