--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -18,7 +18,7 @@
 <div class="container-fluid">
 <div class="row">
   <!-- Ultimas elecciones realizadas -->
-  <div class="col d-flex justify-content-center">
+  <div class="col-6 d-flex justify-content-center">
     <div class="card">
       <div class="card-header">
         Ultimas elecciones
@@ -40,7 +40,7 @@
   <!-- ./Ultimas elecciones realizadas -->
 
   <!-- Proximas elecciones -->
-  <div class="col d-flex justify-content-center">
+  <div class="col-6 d-flex justify-content-center">
     <div class="card">
       <div class="card-header">
         Proximas elecciones
