--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -39,8 +39,8 @@
   </div>
   <!-- ./Ultimas elecciones realizadas -->
 
-  <!-- Proximas elecciones -->
-  <div class="col-6 d-flex justify-content-center">
+  <!-- Proximas elecciones col-6 d-flex justify-content-center-->
+  <div class="container-fluid">
     <div class="card">
       <div class="card-header">
         Proximas elecciones
