--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -17,8 +17,8 @@
 {% block rows %}
 <div class="container-fluid">
 <div class="row">
-  <!-- Ultimas elecciones realizadas -->
-  <div class="col-6 d-flex justify-content-center">
+  <!-- Ultimas elecciones realizadas col-6 d-flex justify-content-center-->
+  <div class="container-fluid">
     <div class="card">
       <div class="card-header">
         Ultimas elecciones
