--- a/apps/bienvenida/templates/bienvenida/snippets/snippet_table_bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/snippets/snippet_table_bienvenida.html
@@ -19,7 +19,7 @@
         {% if object.etapa == 6 %}
         <a class="btn btn-success" href={{object.get_resultado_url}}>Ver Resultado</a>
         {% else %}
-        <a class="btn btn-primary" href="#">Ver Detalles</a>
+        <a class="btn btn-primary" href={{object.get_proxima_url}}>Ver Detalles</a>
         {% endif %}
       </td>
     </tr>
