--- a/apps/bienvenida/templates/bienvenida/detalle_proxima.html
+++ b/apps/bienvenida/templates/bienvenida/detalle_proxima.html
@@ -4,7 +4,7 @@
   <h1>Candidatos postulados:</h1>
   {% for candidato in object.candidatos.all %}
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">candidato</li>
+    <li class="list-group-item">{{candidato}}</li>
   </ul>
   {% endfor %}
 
