--- a/apps/bienvenida/templates/bienvenida/detalle_proxima.html
+++ b/apps/bienvenida/templates/bienvenida/detalle_proxima.html
@@ -7,6 +7,38 @@
     <li class="list-group-item">{{candidato}}</li>
   </ul>
   {% endfor %}
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+        <div class="widget-content p-0">
+            <div class="widget-content-outer">
+                <div class="widget-content-wrapper">
+                    <div class="widget-content-left">
+                        <div class="widget-heading">Total Orders</div>
+                        <div class="widget-subheading">Last year expenses</div>
+                    </div>
+                    <div class="widget-content-right">
+                        <div class="widget-numbers text-success">1896</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
+    <li class="list-group-item">
+        <div class="widget-content p-0">
+            <div class="widget-content-outer">
+                <div class="widget-content-wrapper">
+                    <div class="widget-content-left">
+                        <div class="widget-heading">Clients</div>
+                        <div class="widget-subheading">Total Clients Profit</div>
+                    </div>
+                    <div class="widget-content-right">
+                        <div class="widget-numbers text-primary">$12.6k</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
+  </ul>
 
 {% endblock %}
 {% comment %}
