--- a/apps/bienvenida/templates/bienvenida/detalle_proxima.html
+++ b/apps/bienvenida/templates/bienvenida/detalle_proxima.html
@@ -9,11 +9,11 @@
             <div class="widget-content-outer">
                 <div class="widget-content-wrapper">
                     <div class="widget-content-left">
-                        <div class="widget-heading">{{candidato.full_name}}</div>
-                        <div class="widget-subheading"> . . . </div>
+                        <div class="widget-heading h4">{{candidato.full_name}}</div>
+                        <div class="widget-subheading"> . . . Alguna leyenda, slogan, etc.. </div>
                     </div>
                     <div class="widget-content-right">
-                        <div class="widget-numbers text-success"># {{candidato.pk}}</div>
+                        <div class="widget-numbers text-primary">ID Nro{{candidato.pk}}</div>
                     </div>
                 </div>
             </div>
