--- a/apps/bienvenida/templates/bienvenida/resultado.html
+++ b/apps/bienvenida/templates/bienvenida/resultado.html
@@ -4,12 +4,23 @@
   <h1>RESULTADO DE LAS ELECCIONES</h1>
   <h3>Total de asistencias ##:</h3>
   {% for item in escrutinio %}
-    <div class="list-group">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        {{item.0}}
-        <span class="badge badge-primary badge-pill">{{item.1}}</span>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">
+          <div class="widget-content p-0">
+              <div class="widget-content-outer">
+                  <div class="widget-content-wrapper">
+                      <div class="widget-content-left">
+                          <div class="widget-heading h4">{{item.0.full_name}}</div>
+                          <div class="widget-subheading"> ID Nro{{item.0.pk}} </div>
+                      </div>
+                      <div class="widget-content-right">
+                          <div class="widget-numbers text-primary">Votos:: {{item.1}}%</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
       </li>
-    </div>
+    </ul>
   {% endfor %}
 {% endblock %}
 {% comment %}
