--- a/apps/bienvenida/templates/bienvenida/resultado.html
+++ b/apps/bienvenida/templates/bienvenida/resultado.html
@@ -1,27 +1,32 @@
 {% extends 'utils/detail.html' %}
 {% load static %}
 {% block div_card-body %}
-  <h1>RESULTADO DE LAS ELECCIONES</h1>
-  <h3>Total de asistencias ##:</h3>
-  {% for item in escrutinio %}
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">
-          <div class="widget-content p-0">
-              <div class="widget-content-outer">
-                  <div class="widget-content-wrapper">
-                      <div class="widget-content-left">
-                          <div class="widget-heading h4">{{item.0.full_name}}</div>
-                          <div class="widget-subheading"> ID Nro{{item.0.pk}} </div>
-                      </div>
-                      <div class="widget-content-right">
-                          <div class="widget-numbers text-primary">Votos:: {{item.1}}%</div>
-                      </div>
-                  </div>
-              </div>
+<h1>RESULTADO DE LAS ELECCIONES</h1>
+<h3>Total de asistencias ##:</h3>
+{% for item in escrutinio %}
+<ul class="list-group list-group-flush">
+  <li class="list-group-item">
+    <div class="widget-content p-0">
+      <div class="widget-content-outer">
+        <div class="widget-content-wrapper">
+          <div class="widget-content-left">
+            <div class="widget-heading h4">{{item.0.full_name}}</div>
+            <div class="widget-subheading"> ID Nro{{item.0.pk}} </div>
           </div>
-      </li>
-    </ul>
-  {% endfor %}
+          <div class="widget-content-right">
+            <div class="widget-numbers text-primary">Votos:: {{item.1}}%</div>
+          </div>
+        </div>
+        <div class="widget-progress-wrapper">
+          <div class="progress-bar-xs progress-bar-animated-alt progress">
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </li>
+</ul>
+{% endfor %}
 {% endblock %}
 {% comment %}
 {% endcomment %}
