--- a/apps/bienvenida/templates/bienvenida/resultado.html
+++ b/apps/bienvenida/templates/bienvenida/resultado.html
@@ -19,7 +19,9 @@
         </div>
         <div class="widget-progress-wrapper">
           <div class="progress-bar-xs progress-bar-animated-alt progress">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
+            <div class="progress-bar bg-primary"
+                  role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+                  style="width: {{item.2}}%;"></div>
           </div>
         </div>
       </div>
