--- a/apps/bienvenida/templates/bienvenida/resultado.html
+++ b/apps/bienvenida/templates/bienvenida/resultado.html
@@ -11,15 +11,15 @@
         <div class="widget-content-wrapper">
           <div class="widget-content-left">
             <div class="widget-heading h4">{{item.0.full_name}}</div>
-            <div class="widget-subheading"> ID Nro{{item.0.pk}} </div>
+            <div class="widget-subheading"> ID Nro{{item.0.pk}}</div>
           </div>
           <div class="widget-content-right">
-            <div class="widget-numbers text-primary">Votos:: {{item.1}}%</div>
+            <div class="widget-numbers text-primary">Votos:: {{item.1}} - {{item.2}}%</div>
           </div>
         </div>
         <div class="widget-progress-wrapper">
           <div class="progress-bar-xs progress-bar-animated-alt progress">
-            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: "{{item.2}}"%;"></div>
+            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: {{item.2}}%;"></div>
           </div>
         </div>
       </div>
