--- a/apps/bienvenida/templates/bienvenida/resultado.html
+++ b/apps/bienvenida/templates/bienvenida/resultado.html
@@ -10,7 +10,9 @@
       <div class="widget-content-outer">
         <div class="widget-content-wrapper">
           <div class="widget-content-left">
-            <div class="widget-heading h4">{{item.0.full_name}}</div>
+            <div class="widget-heading h4">
+              {% if item.0.full_name %}{{item.0.full_name}}{% else %}VOTOS EN BLANCO{% endif %}
+              </div>
             <div class="widget-subheading"> ID Nro{{item.0.pk}}</div>
           </div>
           <div class="widget-content-right">
