--- a/apps/bienvenida/templates/bienvenida/resultado.html
+++ b/apps/bienvenida/templates/bienvenida/resultado.html
@@ -10,10 +10,10 @@
       <div class="widget-content-outer">
         <div class="widget-content-wrapper">
           <div class="widget-content-left">
-            <div class="widget-heading h4">
+            <div class="widget-heading h4 text-dark">
               {% if item.0.full_name %}{{item.0.full_name}}{% else %}VOTOS EN BLANCO{% endif %}
               </div>
-            <div class="widget-subheading"> ID Nro{{item.0.pk}}</div>
+            <div class="widget-subheading text-dark"> ID Nro{{item.0.pk}}</div>
           </div>
           <div class="widget-content-right">
             <div class="widget-numbers text-primary">Votos:: {{item.1}} - {{item.2}}%</div>
