{% if object.es_programable == 1 %}

--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
@@ -19,7 +19,7 @@
           </a>
         </div>
         <div class="widget-subheading">
-          <b>FALTA . . . ALGO: {{object.es_programable}}</b>
+          <b>{% if object.es_programable == 1 %} Se podra programar desde el dia anterior a la fecha de la elección {% endif %}</b>
         </div>
         {% endif %}
       </div>
