--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_padron.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_padron.html
@@ -15,7 +15,7 @@
         </div>
         {% endif %}
         <div class="widget-subheading">
-          Como minimo, los candidatos deben pertenecer al padron.
+        <b>Como minimo, los candidatos deben pertenecer al padron.</b>
         </div>
       </div>
       <div class="widget-content-right">
