--- a/apps/gest_usuario/templates/gest_usuario/snippets/snippet_table_EC.html
+++ b/apps/gest_usuario/templates/gest_usuario/snippets/snippet_table_EC.html
@@ -1,5 +1,5 @@
 {% load static %}
-<table class="mb-0 table table-bordered" id="data1">
+<table class="mb-0 table table-bordered" id="data">
   <!--thead-->
   <thead>
     <tr>
