--- a/templates/utils/create_select.html
+++ b/templates/utils/create_select.html
@@ -3,57 +3,6 @@
 {% endblock %}
 {% block rows %}
 {% comment %}
-<div class="row bg-secondary">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-4">
-    <!--SI NECESITA DE OTRA/S RELACIONES-->
-    {% if void_select_field %}
-    <div class="card">
-      <div class="card-header">
-        <h4 class="card-title">Necesita al menos..</h4>
-      </div>
-      <div class="card-body">
-        {% for message in add_new_message %}
-        <h5 class="card-title">{{ message.0 }}</h5>
-        <a class="btn btn-block btn-primary mt-1" href={{message.1}}>Registrar Ahora</a>
-        {% endfor %}
-      </div>
-      <div class="card-footer text-center">
-        * * *
-      </div>
-    </div>
-    <!--/SI NECESITA DE OTRA/S RELACIONES-->
-    {% else %}
-    <div class="card">
-      <form method="post">
-        {% csrf_token %}
-        <div class="card-header text-center">
-          <h5>{{form_title}}</h5>
-        </div>
-        <div class="card-body">
-          {% for field in form.visible_fields %}
-          <label class="font-weight-bold">{{field.label}}</label>
-          <div class="form-group">
-            {% if field.field.widget.input_type == "select" %}
-            <div class="row">
-              <div class="col-sm-8">{{field}}</div>
-              <div class="col-sm-2"><a class="btn btn-primary" href="#">Nuevo</a></div>
-            </div>
-            {% else %}
-            {{field}}
-            {% endif %}
-          </div>
-          {% endfor %}
-        </div>
-        <div class="card-footer">
-          <button class="btn-block btn-lg btn-primary">Registrar</button>
-        </div>
-      </form>
-    </div>
-    {% endif %}
-  </div>
-  <div class="col-sm-4">{{form.errors}}</div>
-</div>
 {% endcomment %}
 <!--tab-content-->
 <div class="tab-content">
@@ -94,6 +43,7 @@
         <div class="position-relative row form-check">
           <div class="col-sm-10 offset-sm-2">
             <button class="btn btn-secondary">{{submit_button}}</button>
+            <a href='#' class="btn btn-danger">{{cancel_button}}</a>
           </div>
         </div>
       </div>
