--- a/templates/utils/create_select.html
+++ b/templates/utils/create_select.html
@@ -40,9 +40,10 @@
           {% endfor %}
       </div>
       <div class="card-footer">
-        <div class="position-relative row form-check">
-            <button class="btn btn-secondary">{{submit_button}}</button>
-            <a href='#' class="btn btn-danger">{{cancel_button}}</a>
+        <!--div class="position-relative row form-check"-->
+        <div class="justify-content-center row form-check">
+          <button class="btn btn-secondary">{{submit_button}}</button>
+          <a href='#' class="btn btn-danger">{{cancel_button}}</a>
         </div>
       </div>
     </div>
