--- a/templates/utils/create_select.html
+++ b/templates/utils/create_select.html
@@ -41,7 +41,7 @@
       </div>
       <div class="card-footer">
         <!--div class="position-relative row form-check"-->
-        <div class="justify-content-center row form-check">
+        <div class="row justify-content-center form-check">
           <button class="btn btn-secondary">{{submit_button}}</button>
           <a href='#' class="btn btn-danger">{{cancel_button}}</a>
         </div>
