--- a/templates/utils/create_select.html
+++ b/templates/utils/create_select.html
@@ -39,9 +39,9 @@
           </div>
           {% endfor %}
       </div>
-      <div class="card-footer">
+      <div class="card-footer justify-content-center">
         <!--div class="position-relative row form-check"-->
-        <div class="row justify-content-center form-check">
+        <div class="row form-check">
           <button class="btn btn-secondary">{{submit_button}}</button>
           <a href='#' class="btn btn-danger">{{cancel_button}}</a>
         </div>
