--- a/templates/utils/create_select.html
+++ b/templates/utils/create_select.html
@@ -43,7 +43,7 @@
         <!--div class="position-relative row form-check"-->
         <div class="row form-check">
           <button class="btn btn-secondary">{{submit_button}}</button>
-          <a href={% url cancel_url %} class="btn btn-danger">{{cancel_button}}</a>
+          <a href={% url cancel_url %} class="btn btn-danger">Cancelar</a>
         </div>
       </div>
     </div>
