--- a/templates/utils/create.html
+++ b/templates/utils/create.html
@@ -13,27 +13,28 @@
         <h5 class="card-title text-light">{{card_title}}</h5>
       </div>
       <div class="card-body">
-          {% for field in form.visible_fields %}
-          {% if field.errors %}
-          <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-10">
-              <li class="list-group-item-danger list-group-item">
-                {{ field.errors|striptags }}
-              </li>
-            </div>
+        {% for field in form.visible_fields %}
+        {% if field.errors %}
+        <div class="row">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-10">
+            <li class="list-group-item-danger list-group-item">
+              {{ field.errors|striptags }}
+            </li>
           </div>
-          {% endif %}
-          <div class="position-relative row form-group">
-            <label for="" class="col-sm-2 col-form-label">
-              {{field.label}}
-            </label>
-            <div class="col-sm-10">{{field}}</div>
-          </div>
-          {% endfor %}
+        </div>
+        {% endif %}
+        <div class="position-relative row form-group">
+          <label for="" class="col-sm-2 col-form-label">
+            {{field.label}}
+          </label>
+          <div class="col-sm-10">{{field}}</div>
+        </div>
+        {% endfor %}
       </div >
       <div class="card-footer justify-content-center">
-        <div class="position-relative row form-check">
+        <!--div class="position-relative row form-check"-->
+        <div class="row form-check">
           <button class="btn btn-secondary">{{submit_button}}</button>
           <a href={% url cancel_url %} class="btn btn-danger">Cancelar</a>
         </div>
