--- a/templates/body_app-header-logo-menu.html
+++ b/templates/body_app-header-logo-menu.html
@@ -1,5 +1,8 @@
 <div class="app-header__logo">
-  <div class="logo-src"></div>
+  <a class="navbar-brand" href={% url 'bienvenida:bienvenida' %}>
+    <div class="logo-src">
+    </div>
+  </a>
   <div class="header__pane ml-auto">
     <div>
       <button type="button" class="hamburger close-sidebar-btn hamburger--elastic is-active" data-class="closed-sidebar">
